# dtksystemsettings

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  config.sh  test-recoverage.sh
.reuse/: dep5
archlinux/: PKGBUILD
cmake/: DtkUtils.cmake
debian/: changelog  control  copyright  libdtkdemo-dev.install  rules
docs/: CMakeLists.txt  demo.en_US.dox  demo.zh_CN.dox  index.en_US.md  test.en_US.dox  (+1 more)
dtkaccounts/example/: CMakeLists.txt  demo.cpp  demo.h  main.cpp
dtklogin/examples/: CMakeLists.txt  demo.cpp  demo.h  main.cpp  powerdemo.cpp  powerdemo.h  propertydemo.cpp  propertydemo.h  signaldemo.cpp  signaldemo.h
dtklogin/src/: CMakeLists.txt  ddbusinterface.cpp  dlogin1manager.cpp  dlogin1manager_p.h  dlogin1seat.cpp  dlogin1seat_p.h  dlogin1session.cpp  dlogin1session_p.h  dlogin1types_p.cpp  dlogin1types_p.h  dlogin1user.cpp  dlogin1user_p.h  dloginmanager.cpp  dloginmanager_p.h  dloginseat.cpp  dloginseat_p.h  dloginsession.cpp  dloginsession_p.h  dlogintypes.cpp  dlogintypes_p.cpp  dlogintypes_p.h  dloginuser.cpp  dloginuser_p.h  dloginutils.cpp  dloginutils.h
dtklogin/src/dbus/: ddbusinterface.cpp  ddbusinterface.h  ddbusinterface_p.h  dlogintypes.cpp  dlogintypes_p.cpp  dlogintypes_p.h  login1managerinterface.cpp  login1managerinterface.h  login1seatinterface.cpp  login1seatinterface.h  login1sessioninterface.cpp  login1sessioninterface.h  login1userinterface.cpp  login1userinterface.h  sessionmanagerinterface.cpp  sessionmanagerinterface.h  startmanagerinterface.cpp  startmanagerinterface.h
dtknotifications/: CMakeLists.txt  README.md  README.zh_CN.md
dtknotifications/docs/: CMakeLists.txt  dabstractnotificationmodeconfig.zh_CN.dox  dnotificationappconfig.zh_CN.dox  index.zh_CN.md
dtknotifications/example/: main.cpp
dtknotifications/include/: dabstractnotificationmodeconfig.h  dnotificationappconfig.h  dnotificationdndmodeconfig.h  dnotificationmanager.h  dnotificationtypes.h  dtknotification_global.h
dtknotifications/src/: dabstractnotificationmodeconfig.cpp  dabstractnotificationmodeconfig_p.h  dnotificationappconfig.cpp  dnotificationappconfig_p.h  dnotificationdndmodeconfig.cpp  dnotificationdndmodeconfig_p.h  dnotificationmanager.cpp  dnotificationmanager_p.h  dnotificationtypes.cpp  dnotificationutils.cpp  dnotificationutils.h
dtknotifications/src/dbus/: dnotificationinterface.cpp  dnotificationinterface.h  dnotificationtypes_p.cpp  dnotificationtypes_p.h
dtknotifications/tests/: CMakeLists.txt  ut-dappnotificationconfig.cpp  ut-ddndmodenotificationconfig.cpp  ut-dnotificationmanager.cpp
dtknotifications/tests/fakedbus/: notificationmanagerservice.h
dtkpower/examples/: CMakeLists.txt  dkbbacklightdemo.cpp  dpowerdevicedemo.cpp  dpowersettingsdemo.cpp
dtkrfmanager/example/: CMakeLists.txt  demo.cpp  demo.h  main.cpp
dtkrfmanager/tests/: CMakeLists.txt  main.cpp  ut_drfmanager.cpp
dtksystemtime/example/: CMakeLists.txt  dsystemtimedemo.cpp
dtksystemtime/tests/: CMakeLists.txt  main.cpp  ut_dsystemtime.cpp
dtksystemtime/tests/fakedbus/: timedate1service.cpp  timedate1service.h  timesync1service.h
getjobs/: CMakeLists.txt  README.md  README.zh_CN.md
getjobs/docs/: index.zh_CN.md
getjobs/examples/: CMakeLists.txt  main.cpp
getjobs/include/: getjobinfo.h
getjobs/src/: CMakeLists.txt  getjobinfo.cpp
src/: CMakeLists.txt  demo.cpp  test.cpp
src/accounts/: daccountsmanager.cpp  daccountsuser.cpp  daccountsuser_p.h
src/accounts/dbus/: daccountsinterface.cpp  daccountsinterface.h  daccountstypes_p.cpp  dsystemaccountsinterface.cpp  dsystemaccountsinterface.h  dsystemuserinterface.cpp  dsystemuserinterface.h  duserinterface.cpp  duserinterface.h
src/dbus/: ddbusinterface.cpp  ddemointerface.cpp  ddemointerface.h  ddemotypes.h  ddemotytpes.cpp
src/login/: dloginmanager.cpp  dloginseat.cpp  dloginseat_p.h  dloginsession.cpp  dloginsession_p.h  dloginuser.cpp  dloginutils.cpp  dloginutils.h
src/login/dbus/: dlogintypes_p.cpp  dlogintypes_p.h  login1managerinterface.cpp  login1managerinterface.h  login1seatinterface.cpp  login1seatinterface.h  login1sessioninterface.h  login1userinterface.cpp  login1userinterface.h  sessionmanagerinterface.cpp  sessionmanagerinterface.h  startmanagerinterface.cpp
src/power/: dkbdbacklight.cpp  dkbdbacklight_p.h  dpowerdevice.cpp  dpowerdevice_p.h  dpowermanager.cpp  dpowermanager_p.h  dpowersettings.cpp  dpowersettings_p.h
src/power/dbus/: daemonpowerinterface.cpp  daemonpowerinterface.h  systempowerinterface.h  upowerdeviceinterface.cpp  upowerdeviceinterface.h  upowerkbdbacklightinterface.cpp  upowerkbdbacklightinterface.h  upowermanagerinterface.h  upowertypes_p.cpp  upowertypes_p.h
src/rfmanager/: drfmanager.cpp
src/systemtime/: dsystemtime.cpp  dsystemtime_p.h
src/systemtime/dbus/: dsystemtimetypes_p.h  timedate1interface.h  timesync1interface.cpp  timesync1interface.h
tests/: CMakeLists.txt  main.cpp  ut-ddemoinnterface.cpp  ut-demo.cpp
tests/accounts/: ut-daccountsuser.cpp
tests/accounts/fakedbus/: accountsmanagerservice.cpp  accountsmanagerservice.h  accountsuserservice.h
tests/dbus/: com.deepin.dtk.fakeInterface.xml  dfakeinterface.cpp  dfakeinterface.h  fakeInterface.cmake
tests/libdemo/: libmockdemo.cpp
tests/login/: ut_dloginmanager.cpp  ut_dloginsession.cpp  ut_dloginuser.cpp
tests/login/fakedbus/: login1managerservice.cpp  login1managerservice.h  login1seatservice.cpp  login1seatservice.h  login1sessionservice.cpp  login1sessionservice.h  login1userservice.cpp  login1userservice.h
tests/mockdemo/: mockdemo.cpp  mockdemo.h
tests/power/: ut_dpowerdevice.cpp  ut_dpowerkbdbacklight.cpp  ut_dpowermanager.cpp  ut_dpowersettings.cpp
tests/power/fakedbus/: daemonpowerservice.h  upowerdeviceservice.cpp  upowerdeviceservice.h  upowerkbdbacklightservice.cpp  upowerkbdbacklightservice.h  upowermanagerservice.cpp  upowermanagerservice.h
tests/rfmanager/: ut_drfmanager.cpp
tests/systemtime/: ut_dsystemtime.cpp
tests/systemtime/fakedbus/: timedate1service.cpp  timedate1service.h  timesync1service.cpp  timesync1service.h
(+298 files in other folders)
